--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                 const pathArray = window.location.pathname.split('/');
                 const movieId = pathArray[pathArray.length - 1];
 
-				const movieResponse = await fetch(`https://api.themoviedb.org/3/tv/${series_id}?api_key=${TMDB_API_KEY}`);
+				const movieResponse = await fetch(`https://api.themoviedb.org/3/tv/${seriesid}?api_key=${TMDB_API_KEY}`);
                 const movie = await movieResponse.json();
 
                 if (movie.success === false) {
@@ -383,6 +383,7 @@
 </body>
 
 </html>
+
 
 
 
