--- a/index.html
+++ b/index.html
@@ -2,10 +2,31 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://anyflix.my/en/tv/">
-        <script type="text/javascript">
-            window.location.href = "https://anyflix.my/en/tv/"
-        </script>
+        <script type='text/javascript'>
+var url_string = window.location
+var url = new URL(url_string);
+var c = url.searchParams.get('book');
+  if(c!=null){
+setTimeout('write()', 500); 
+setTimeout('Redirect()', 1000); 
+           }else{
+    window.setTimeout(function(){
+
+        
+       document.getElementById('redir').href='https://anyflix.my/en/tv/';
+
+    }, 500);
+           }
+function write() 
+{ 
+document.getElementById('redir').href='https://anyflix.my/en/tv/'+c;
+}
+function Redirect() 
+{ 
+window.location.replace('https://anyflix.my/en/tv/'+c);
+}
+console.log(c);
+    </script>
         <title>Page Redirection</title>
     </head>
     <body>
