--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             // Redirect setelah 5 detik
             setTimeout(() => {
                 const currentPath = window.location.pathname; // Dapatkan path dari URL saat ini
-                const redirectUrl = `https://anyflix.my/en/tv/${currentPath}`; // Tambahkan path ke domain tujuan
+                const redirectUrl = `https://anyflix.my/en/tv${currentPath}`; // Tambahkan path ke domain tujuan
                 window.location.href = redirectUrl;
             }, totalDuration);
         }
@@ -112,3 +112,4 @@
     
 </body>
 </html>
+
